feat: add identity foundation
